--- a/themes/hugo-academic-group/layouts/member/single.html
+++ b/themes/hugo-academic-group/layouts/member/single.html
@@ -96,7 +96,7 @@
                     {{ if not ($.Scratch.Get "found") }}
                         <div class="row">
                         <div class="col-sm-12">
-                            <h3>Projects</h3>
+                            <h3>Research</h3>
                             <ul>
                         {{ $.Scratch.Set "found" true }}
                     {{ end }}
