--- a/themes/hugo-academic-group/layouts/partials/footer_container.html
+++ b/themes/hugo-academic-group/layouts/partials/footer_container.html
@@ -2,6 +2,10 @@
     <div class="container">
         <p class="powered-by">
             {{ with .Site.Copyright }}{{ . | markdownify}} {{ end }}
+            </br>
+			<a href="https://github.com/pzhaonet/hes-website/issues" target="_blank">Forum</a> - 
+			<a href="https://github.com/pzhaonet/hes-website/tree/main/content" target="_blank">Edit</a> -
+			<a href="../index.xml" target="_blank">Subscribe RSS</a>
 <!---
             {{ with .Site.Copyright }}{{ . | markdownify}} &middot; {{ end }}
 			
