--- a/themes/hugo-academic-group/layouts/partials/index/single_post.html
+++ b/themes/hugo-academic-group/layouts/partials/index/single_post.html
@@ -1,7 +1,10 @@
 <div class="article-list-item" itemscope itemprop="blogPost">
   {{ if .Params.image }}
       <a href="{{ .Permalink }}">
+          <img src="{{ $.Site.BaseURL }}/img/{{ .Params.image }}">
+	<!--
           <img src="{{ $.Site.BaseURL }}/img/{{ .Params.image }}" class="article-banner" itemprop="image">
+	-->
       </a>
   {{end}}
   <h3 class="article-title" itemprop="name"><a href="{{ .Permalink }}" itemprop="url">{{ .Title }}</a></h3>
