--- a/themes/hugo-academic-group/layouts/partials/navbar.html
+++ b/themes/hugo-academic-group/layouts/partials/navbar.html
@@ -56,6 +56,19 @@
                 
             </ul>
 
+<!-- search bar -->
+<a id="search-btn" style="display: inline-block;" href="javascript:void(0);">
+    <span class="icon-search">Search</span>
+</a>
+
+<div id="fastSearch">
+    <input id="searchInput" tabindex="0">
+    <ul id="searchResults">
+    </ul>
+</div>
+<script src="/js/fuse.min.js"></script> <!-- download and copy over fuse.min.js file from fusejs.io -->
+<script src="/js/fastsearch.js"></script>
+
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
 </nav>
