--- a/themes/hugo-academic-group/layouts/post/single.html
+++ b/themes/hugo-academic-group/layouts/post/single.html
@@ -16,7 +16,9 @@
 
         <div class="row">
             <div class="col-xs-6 article-published-at">
+        {{ if .Date }}
                 <i>Published on:</i> <p>{{ .Date.Format "Jan 2, 2006" }}</p>
+        {{end}}
             </div>
             <div class="col-xs-6 article-authors">
                 <i>Authors:</i>
