--- a/themes/hugo-academic-group/layouts/partials/index/projects.html
+++ b/themes/hugo-academic-group/layouts/partials/index/projects.html
@@ -6,7 +6,7 @@
         <!-- Section heading -->
         <div class="row">
             <div class="col-xs-12 col-md-12 section-heading">
-                <h1><a href="{{.Site.BaseURL}}/project/{{if .Site.Params.uglyURLs}}index.html{{end}}">{{ with .Site.Params.projects.title }}{{ . | markdownify }}{{ end }}</a></h1>
+                <h1><a href="{{.Site.BaseURL}}/{{ i18n "insertZh/" }}project/{{if .Site.Params.uglyURLs}}index.html{{end}}">{{ with .Site.Params.projects.title }}{{ . | markdownify }}{{ end }}</a></h1>
                 {{ with .Site.Params.projects.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
             </div>
         </div>
