--- a/themes/hugo-academic-group/layouts/post/single.html
+++ b/themes/hugo-academic-group/layouts/post/single.html
@@ -21,7 +21,7 @@
         {{end}}
             </div>
             <div class="col-xs-6 article-authors">
-                <i>Authors:</i>
+                <i>{{ i18n "postAuthors" }}:</i>
                 {{ partial "authors" .Params.authors }}
             </div>
         </div>
