--- a/themes/hugo-academic-group/layouts/member/single.html
+++ b/themes/hugo-academic-group/layouts/member/single.html
@@ -57,7 +57,7 @@
 
             {{ if isset .Params "interests" }}
             <div class="col-sm-5">
-                <h3>Interests</h3>
+                <h3>{{ i18n "interestsTitle" }}</h3>
                 <ul>
                     {{ range .Params.interests }}
                     <li>{{ . }}</li>
@@ -69,7 +69,7 @@
 
             {{ if isset .Params "education" }}
             <div class="col-sm-7">
-                <h3>Education</h3>
+                <h3>{{ i18n "educationTitle" }}</h3>
                 <ul class="ul-edu fa-ul">
                     {{ range .Params.education }}
                     <li>
@@ -96,7 +96,7 @@
                     {{ if not ($.Scratch.Get "found") }}
                         <div class="row">
                         <div class="col-sm-12">
-                            <h3>Research</h3>
+                            <h3>{{ i18n "researchTitle" }}</h3>
                             <ul>
                         {{ $.Scratch.Set "found" true }}
                     {{ end }}
@@ -124,7 +124,7 @@
                     {{ if not ($.Scratch.Get "found") }}
                         <div class="row">
                         <div class="col-sm-12">
-                            <h3>Publications</h3>
+                            <h3>{{ i18n "publicationTitle" }}</h3>
                             <ul>
                         {{ $.Scratch.Set "found" true }}
                     {{ end }}
@@ -145,7 +145,7 @@
 			
         <div class="row">
             <div class="col-sm-12">
-                <h3>Biography</h3>
+                <h3>{{ i18n "biographyTitle" }}</h3>
                  <div class="article-style">{{ .Content }}</div>
             </div>
         </div>
