--- a/themes/hugo-academic-group/layouts/partials/index/posts.html
+++ b/themes/hugo-academic-group/layouts/partials/index/posts.html
@@ -6,7 +6,7 @@
             
             <!-- Section heading -->
             <div class="col-xs-12 col-md-4 section-heading">
-                <h1><a href="{{ $.Site.BaseURL }}/post/{{if .Site.Params.uglyURLs}}index.html{{end}}"> {{ with .Site.Params.posts.title }}{{ . | markdownify }}{{ end }}</a></h1>
+                <h1><a href="{{ $.Site.BaseURL }}/{{ i18n "insertZh/" }}post/{{if .Site.Params.uglyURLs}}index.html{{end}}"> {{ with .Site.Params.posts.title }}{{ . | markdownify }}{{ end }}</a></h1>
                 {{ with .Site.Params.posts.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
             </div>
             
