--- a/themes/hugo-academic-group/layouts/section/publication.html
+++ b/themes/hugo-academic-group/layouts/section/publication.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Publications</h1>
+            <h1>{{ i18n "publicationTitle" }}</h1>
 
             {{ range .Data.Pages.GroupByDate "2006" }}
 
