add more links in the footer

--- a/themes/hugo-academic-group/layouts/partials/footer_container.html
+++ b/themes/hugo-academic-group/layouts/partials/footer_container.html
@@ -11,9 +11,23 @@
   <p class="powered-by">
             {{ with .Site.Copyright }}{{ . | markdownify}} {{ end }}
             </br>
+			<a href="">Home</a> - 
+			<a href="#members">Staff</a> - 
+            <a href="post/support_team">Support</a> - 
+            <a href="post/students/">Students</a> - 
+            <a href="post/alumni">Alumni</a> - 
+            <a href="#projects">Research</a> - 
+            <a href="#publications">Publications</a> - 
+            <a href="post/projects">Projects</a> - 
+            <a href="post/module">Teaching</a> - 
+            <a href="post">News</a> - 
+            <a href="post/events">Events</a> - 
+            <a href="https://heslab.pzhao.org/">Lab</a> - 
+            <a href="about">About</a> - 
+            <a href="#contact">Contact</a> - 
 			<a href="https://github.com/pzhaonet/hes-website/issues" target="_blank">Forum</a> - 
-			<a href="https://github.com/pzhaonet/hes-website/tree/main/content" target="_blank">Edit</a> -
-			<a href="../index.xml" target="_blank">Subscribe RSS</a>
+			<a href="../index.xml" target="_blank">Subscribe RSS</a> -
+			<a href="https://github.com/pzhaonet/hes-website/tree/main/content" target="_blank">Edit</a>
 <!---
             {{ with .Site.Copyright }}{{ . | markdownify}} &middot; {{ end }}
 			
