re-organize some links and pages

--- a/themes/hugo-academic-group/layouts/partials/footer_container.html
+++ b/themes/hugo-academic-group/layouts/partials/footer_container.html
@@ -12,18 +12,20 @@
             {{ with .Site.Copyright }}{{ . | markdownify}} {{ end }}
             </br>
 			<a href="">{{ i18n "homeTitle" }}</a> - 
-			<a href="#members">{{ i18n "staffTitle" }}</a> - 
+			<a href="member">{{ i18n "staffTitle" }}</a> - 
             <a href="post/support_team">{{ i18n "supportTitle" }}</a> - 
-            <a href="post/students/">{{ i18n "studentsTitle" }}</a> - 
+            <a href="post/postgraduates/">{{ i18n "studentsTitle" }}</a> - 
+            <a href="post/undergraduates/">{{ i18n "undergraduatesTitle" }}</a> - 
             <a href="post/alumni">{{ i18n "alumniTitle" }}</a> - 
-            <a href="#projects">{{ i18n "researchTitle" }}</a> - 
-            <a href="#publications">{{ i18n "publicationTitle" }}</a> - 
+            <a href="project">{{ i18n "researchTitle" }}</a> - 
+            <a href="publication">{{ i18n "publicationTitle" }}</a> - 
             <a href="post/projects">{{ i18n "projectsTitle" }}</a> - 
             <a href="post/module">{{ i18n "teachingTitle" }}</a> - 
             <a href="post">{{ i18n "newsTitle" }}</a> - 
             <a href="post/events">{{ i18n "eventsTitle" }}</a> - 
             <a href="https://heslab.pzhao.org/">{{ i18n "labTitle" }}</a> - 
             <a href="about">{{ i18n "aboutTitle" }}</a> - 
+            <a href="post/admissions">{{ i18n "admissionsTitle" }}</a> - 
             <a href="#contact">{{ i18n "contactTitle" }}</a> - 
 			<a href="https://github.com/pzhaonet/hes-website/issues" target="_blank">{{ i18n "forumTitle" }}</a> - 
 			<a href="../index.xml" target="_blank">{{ i18n "rssTitle" }}</a> -
