--- a/themes/hugo-academic-group/layouts/partials/index/projects.html
+++ b/themes/hugo-academic-group/layouts/partials/index/projects.html
@@ -5,19 +5,27 @@
         
         <!-- Section heading -->
         <div class="row">
-            <div class="col-xs-12 col-md-12 section-heading">
+            <div class="col-xs-12 col-md-4 section-heading">
                 <h1><a href="{{.Site.BaseURL}}/{{ i18n "insertZh/" }}project/{{if .Site.Params.uglyURLs}}index.html{{end}}">{{ with .Site.Params.projects.title }}{{ . | markdownify }}{{ end }}</a></h1>
                 {{ with .Site.Params.projects.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
+            </div>
+			
+			<div class="col-xs-12 col-md-8">
+                {{ range first .Site.Params.projects.count (where .Site.RegularPages "Type" "project") }}
+                    {{ partial "project_li_detailed" . }}
+                {{ end }}
+				
             </div>
         </div>
         
         <!-- Projects -->
-        
+        <!---
         {{ range first .Site.Params.projects.count (sort (where .Site.RegularPages "Type" "project") ".Params.sort_position") }}
             {{ partial "index/single_project" . }}
         {{ end }}
-            
+        --->    
         
+		
         <!-- Link to all projects -->
         <div>
             {{ if gt $projects_len .Site.Params.projects.count }}
